# lgl-collocation-python

./: README.md  lglpsmethods.py  lgltools.py  pyproject.toml  test.py
